Fix word wrap

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -259,6 +259,7 @@ a {
     hsla(0, 0%, 0%, 0.3) 50%, hsla(0, 0%, 100%, 0.2)
   );
   transition: all 0.2s ease;
+  word-wrap: break-word;
 
   &:before {
     content: '';
